# xymon

./: .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changes  GIT-MIGRATION.md  PROJECT-ORGANIZATION.md  README  README.IPv6  README.backfeed  RELEASENOTES  config.h.in  configure.client  configure.server
.github/: RELEASING.md
.github/workflows/: build.yml  build1.yml  build2.yml  build3.yml  ci-quality.yml  ci-validate.yml  install-deps.sh  tests.yml  workflow-prep-release.yaml  workflow-release.yaml  xymon-build-cmake.yml  xymon-build.yml
WinPSClient/: XymonPSClient.doc  xymonclient.ps1
client/: Makefile  README-local  clientlaunch.cfg.DIST  localclient.cfg  logfetch.c  netbsd-meminfo.c  xymonclient-darwin.sh  xymonclient-freebsd.sh  xymonclient-linux.sh  xymonclient-netbsd.sh  xymonclient-openbsd.sh  xymonclient.cfg.DIST
common/: clientlaunch.cfg.5  clientupdate.1  hosts.cfg.5  logfetch.1  msgcache.8  orcaxymon.1  tasks.cfg.5  xymon-xmh.5  xymon.1  xymon.7  xymon.c  xymoncfg.1  xymonclient.cfg.5  xymoncmd.1  xymondigest.1  xymongrep.1  xymongrep.c  xymonlaunch.8  xymonlaunch.c  xymonserver.cfg.5
debian/: changelog  control  copyright  rules  xymon-client-env-wrapper.sh  xymon-client-prepare.sh  xymon-client.config  xymon-client.dirs  xymon-client.docs  xymon-client.init  xymon-client.install  xymon-client.lintian-overrides  xymon-client.postinst  xymon-client.postrm  xymon-client.service  xymon-client.templates  xymon-server-prepare.sh  xymon.dirs  xymon.docs  xymon.init  xymon.install  xymon.lintian-overrides  xymon.postinst  xymon.postrm  xymon.preinst  xymon.service
debian/clientlaunch.d/: README
docker/: docker-compose.yml
docs/: Makefile  TODO  configure.txt  git-setup.md  howtograph.html  install.html.DIST  known-issues.html  pcre-compat-migration.md  xymon-apacheconf.txt.DIST
include/: libxymon.h  pcre_compat.h  rrd_compat.h  version.h
lib/: Makefile  acklog.c  acknowledgementslog.c  availability.c  cgi.c  cgi.h  cgiurls.c  clientlocal.c  color.c  digest.c  environ.c  environ.h  errormsg.c  eventlog.c  files.c  headfoot.c  holidays.c  htmllog.c  htmllog.h  links.c  loadalerts.c  loadalerts.h  loadcriticalconf.c  loadhosts.c  loadhosts_file.c  loadhosts_net.c  locator.c  matching.c  matching.h  memory.c  misc.c  misc.h  msort.c  netservices.c  netservices.h  notifylog.c  pcre_compat.c  pcre_compat.h  readmib.c  rrd_api_compat.h  (+22 more)
migration/: README.md  sync-xymon-svn.sh  xymon-svn-to-git.sh
rpm/: xymon-client.te  xymon.spec  xymon.te
tests/: README.md  count-rrd-files.c  count-rrd-negative.c  graph-link-data.c  html-log-graphs.c  pr44-count-rrd-files.sh  testsuite  trends-page-graphs.c
tools/: xymon-sysctl.conf  xymonlaunch.service
web/: ackinfo.c  ackinfo.cgi.1  acknowledge.c  acknowledge.cgi.1  appfeed.c  appfeed.cgi.1  cgioptions.cfg.5  chpasswd.c  confreport.c  confreport.cgi.1  critical.cfg.5  criticaleditor.c  criticaleditor.cgi.1  criticalview.c  criticalview.cgi.1  csvinfo.c  csvinfo.cgi.1  datepage.c  datepage.cgi.1  enadis.c  enadis.cgi.8  eventlog.cgi.1  findhost.c  findhost.cgi.1  ghostlist.cgi.1  graphs.cfg.5  history.c  history.cgi.1  hostgraphs.c  hostgraphs.cgi.1  hostlist.c  perfdata.c  report.c  report.cgi.1  reportlog.c  reportlog.cgi.1  showgraph.c  showgraph.cgi.1  snapshot.c  snapshot.cgi.1  (+9 more)
xymond/: Makefile  alerts.cfg.5  analysis.cfg.5  client-local.cfg.5  client_config.c  combo.cfg.5  combostatus.1  combostatus.c  do_alert.c  do_rrd.c  do_rrd.h  trimhistory.8  trimhistory.c  xymon-mailack.8  xymon-mailack.c  xymond.8  xymond.c  xymond_alert.8  xymond_capture.8  xymond_capture.c  xymond_channel.8  xymond_channel.c  xymond_client.8  xymond_client.c  xymond_distribute.8  xymond_filestore.8  xymond_filestore.c  xymond_history.8  xymond_history.c  xymond_hostdata.8  xymond_hostdata.c  xymond_rrd.8  xymond_rrd.c  xymond_sample.8  xymonfetch.8  xymonweb.5
xymongen/: pagegen.c  process.c  util.c  wmlgen.c  xymongen.1
xymonnet/: Makefile  beastat.c  contest.c  contest.h  dns.c  dns2.c  httpcookies.c  httpresult.c  httptest.c  ldaptest.c  ntpcmd.c  ntpprobe.c  protocols.cfg  protocols.cfg.5  udpquery.c  udpquery.h  xymon-snmpcollect.c  xymonnet-again.sh.1  xymonnet.1  xymonnet.c  xymonnet.h  xymonping.1  xymonping.c
xymonproxy/: xymoncgimsg.c  xymoncgimsg.cgi.8  xymonproxy.8  xymonproxy.c
(+198 files in other folders)
